--- a/sass/calculators/_calculators.scss
+++ b/sass/calculators/_calculators.scss
@@ -86,6 +86,11 @@
         @media only screen and (max-width: 500px) {
             height: 27%;
         }
+
+        &-monthly{
+            height: 50%;
+        }
+
     }
 
     &-middle{
@@ -96,6 +101,7 @@
         @media only screen and (max-width: 500px) {
             height: 29%;
         }
+
 
     }
 
@@ -108,6 +114,10 @@
 
         @media only screen and (max-width: 300px) {
             height: 43%;
+        }
+
+        &-monthly{
+            height: 50%;
         }
 
     }
